--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,3 +1,20 @@
+
+
+
+<img src="assets/setting1.png" style="max-width:3%;" class="rounded float-right">
+<li class="nav-item">   
+  <div class="dropdown">
+      <a href="#" id="imageDropdown" data-toggle="dropdown">
+        <img src="assets/setting1.png" style="max-width:3%" class="rounded float-right">
+      </a>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="imageDropdown">
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">setting</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">logout</a></li>
+    </ul>
+</div>
+</li>
+
+
 <div class="container">
    <div class="row">
       <div class="col-sm-6 mx-auto bg-light sgadow-lg mt-5 p-4">
@@ -22,4 +39,13 @@
       </form>
    </div>
 </div>
+</div>
+
+<div class="navbar-collapse collapse">
+
+  <ul class="nav navbar-nav navbar-right">
+
+<a href="#" id="imageDropdown" data-toggle="dropdown"><img src="assets/setting1.png" style="max-width:3%"></a>
+
+  </ul>
 </div>
